<resources>
    <string name="app_name">Coffee Order</string>
    <string name="name_of_user">Name</string>
    <string name="address_of_user">Address</string>
    <string name="email_of_user">Email</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream (Rs. 5)</string>
    <string name="chocolate">Chocolate (Rs. 10)</string>
    <string name="price">Price</string>
    <string name="display">Rs. 20</string>
    <string name="quantity">Quantity</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="number">1</string>
    <string name="order">Order</string>


</resources>